[Texmap][EFL] Accelerated compositing support using TextureMapper on EFL port https://bugs.webkit.org/show_bug.cgi?id=73111

.:

Add feature define for TextureMapper and OpenGL package.

Patch by Hyowon Kim <hw1008.kim@samsung.com> on 2011-11-29
Reviewed by Noam Rosenthal.

* Source/cmake/OptionsEfl.cmake:

Source/WebCore:

This patch adds Texture Mapper related files to PlatformEfl.cmake
and removes Qt-specific types in TextureMapperNode.cpp.

Patch by Hyowon Kim <hw1008.kim@samsung.com> on 2011-11-29
Reviewed by Noam Rosenthal.

* PlatformEfl.cmake:
* platform/graphics/GraphicsLayer.cpp:
* platform/graphics/GraphicsLayer.h:
* platform/graphics/efl/GraphicsLayerEfl.cpp: Removed.
* platform/graphics/efl/GraphicsLayerEfl.h: Removed.
* platform/graphics/texmap/TextureMapperNode.cpp:
(WebCore::solveCubicBezierFunction):
(WebCore::solveStepsFunction):

Canonical link: https://commits.webkit.org/89828@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101347 268f45cc-cd09-0410-ab3c-d52691b4dbfc